maze.lessons.maze.island.IslandMaze.scala.error
Escaper:12: error: not found: value getPosX
  while (getPosX!=0) {
         ^